--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "env": [
-    "NEXT_PUBLIC_SUPABASE_URL",
-    "NEXT_PUBLIC_SUPABASE_ANON_KEY"
-  ],
+  "env": {
+    "NEXT_PUBLIC_SUPABASE_URL": "@next_public_supabase_url",
+    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@next_public_supabase_anon_key"
+  },
   "buildCommand": "npm run build",
   "outputDirectory": ".next"
 }
